--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					</section>
 					<section>
 						<p>A final capstone project for UC Berkeley's Master of Information and Data Science program</p>
+                        <p>Created by Lisa Barcelo, Lisa Minas, and Scott Marler</p>
 						<ul class="actions">
 							<li><a target="_blank" href="https://datascience.berkeley.edu/" class="button special">datascience@berkeley</a></li>
 						</ul>
