--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>[UNDER CONSTRUCTION]Political Insights</title>
+		<title>Political Insights</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,8 @@
 			<section id="banner">
 				<div class="inner split">
 					<section>
-						<h2>Welcome to Political Insights, a place to learn about your elected representitaves</h2>
+						<h2>UNDER CONSTRUCTION</h2>
+                        <h2>Welcome to Political Insights, a place to learn about your elected representitaves</h2>
 					</section>
 					<section>
 						<p>A final capstone project for UC Berkeley's Master of Information and Data Science program</p>
