--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<section id="banner">
 				<div class="inner split">
 					<section>
-						<h2>UNDER CONSTRUCTION</h2>
+						<h2>UNDER CONSTRUCTION</h2><br>
                         <h2>Welcome to Political Insights, a place to learn about your elected representitaves</h2>
 					</section>
 					<section>
